data/derived/comb/progs/unify/prog3477.ml.out
Characters 48-49:
  | h::t -> t;;
            ^
Error: This expression has type 'a list
       but an expression was expected of type int
